create and delete operations on bubbles

--- a/bubblesconfig.json
+++ b/bubblesconfig.json
@@ -49,8 +49,7 @@
       "slug": "deepseek",
       "users": [
         "user_2ryctcJCUrNdtCy3oHrtugjgZaC",
-        "user_2rydFNtQqz3b8Tx12ToxZrvtH26",
-        ""
+        "user_2rydFNtQqz3b8Tx12ToxZrvtH26"
       ]
     }
   ]
