--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@clerk/nextjs": "^6.9.14",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ldrs": "^1.0.2",
     "lucide-react": "^0.473.0",
+    "mongodb": "^6.13.0",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.3",
     "stream-chat": "^8.52.0",
     "stream-chat-react": "^12.8.2",
     "tailwind-merge": "^2.6.0",
